--- a/css/styles.css
+++ b/css/styles.css
@@ -84,13 +84,19 @@ header {
 }
 /*SECTION CONFERENCIA*/
 #sectionConferencia {
-    height: 86vh;
+    min-height: 86vh;
     display: flex;
     justify-content:space-evenly;   
     align-items: center;
     text-align: end;
     .divVacioConferencia {
         width: 30%;
+    }
+    /* Media query para la vista móvil */
+    @media (max-width: 768px){
+        .divVacioConferencia {
+            display: none;
+        }
     }
     .descripcionConferencia {
         width: 40%;
@@ -106,6 +112,15 @@ header {
             border: 1px solid var(--color-green-dark);
             border-radius: 5px;
             background-color: var(--color-green-dark);
+        }
+        > div {
+            display: flex;
+            justify-content: end;
+            flex-wrap: wrap;
+            > * {
+                margin-top: 0.5rem;
+                margin-left: 0.5rem;
+            }
         }
     }
 }
@@ -123,9 +138,20 @@ header {
 .contenedorTarjetas {
     margin: 0 auto;
     width: 80%;
-    /* height: 100vh; */
+    min-height: 100vh;
     display: flex;
     justify-content: center;
+}
+/* Media query para la vista móvil */
+@media (max-width: 768px) {
+    .contenedorTarjetas {
+        flex-direction: column;
+        align-items: center;
+        .tarjeta {
+            width: 90%; 
+            margin: 0.5rem auto;
+        }
+    }
 }
 .tarjeta {
     border: solid 1px var(--color-gray-light);
@@ -182,7 +208,7 @@ header {
 /*SECTION LUGAR Y FECHA*/
 .sectionLugarFecha {
     display: flex;
-    height: 60vh;
+    min-height: 70vh;
     .imagenSectionLugarFecha {
         width: 50%;
         background-image: url("../assets/img/honolulu.jpg");
@@ -194,12 +220,26 @@ header {
         width: 50%;
         background-color: var(--color-gray);
         color: var(--color-white);
+        padding: 2rem;
         .transparentButon {
             border: 1px solid var(--color-white);
             border-radius: 5px;
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
         }
         > * {
             margin: 1.5rem;
+        }
+    }
+    /* Media query para la vista móvil */
+    @media (max-width: 768px) {
+        flex-direction: column;
+        .imagenSectionLugarFecha {
+            min-height: 30vh;
+        }
+        .imagenSectionLugarFecha,
+        .contenidoSectionLugarFecha {
+            width: 100%;
         }
     }
 }
@@ -218,6 +258,8 @@ header {
         > span {
         text-decoration: underline dotted;
         }
+        margin-left: 2rem;
+        margin-right: 2rem;
     }
     > form {
         display: flex;
@@ -238,6 +280,10 @@ header {
         > div {
             width: 100%;
             margin: 0.3rem;
+            > textarea {
+                padding-top: 0.5rem;
+                font-size:1.1rem;
+            }
             > textarea,
             > input {
                 width: 95%;
@@ -245,16 +291,16 @@ header {
                 border-radius: 5px;
                 border: 1px solid var(--color-gray-light);
             }
+            > textarea::placeholder {
+                font-size:1.1rem;
+                padding-top: 0.5rem;
+            }
             > #firstname,
             > #lastname {
                 width: 45%;
                 border: 1px solid var(--color-gray-light);
                 padding-top: 0.2rem;
                 padding-bottom: 0.2rem;
-            }
-            > textarea::placeholder {
-                font-size:1.1rem;
-                padding-top: 0.5rem;
             }
             > p {
                 margin-left: 1.1rem;
