--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-size: 1rem;
     box-sizing: border-box;
     font-family: 'Hind', sans-serif;
     /* font-family: 'Quicksand', sans-serif; */
@@ -69,6 +70,8 @@ header {
     .logoHeader {
         .link {
         display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
         align-items: center;
             .logo {
                 height: 80px;
@@ -79,7 +82,14 @@ header {
         .contenedorLinks {
             display: flex;
             flex-wrap: wrap;
+            justify-content: space-evenly;
+            margin-left: 2rem;
+            margin-right: 2rem;
         }
+    }
+    /* Media query para la vista móvil */
+    @media (max-width: 768px) {
+        flex-direction: column;
     }
 }
 /*SECTION CONFERENCIA*/
@@ -122,6 +132,10 @@ header {
                 margin-left: 0.5rem;
             }
         }
+            /* Media query para la vista móvil */
+        @media (max-width: 768px){
+            width: 80%;
+        }
     }
 }
 /*SECTION ORADORES*/
@@ -143,7 +157,7 @@ header {
     justify-content: center;
 }
 /* Media query para la vista móvil */
-@media (max-width: 768px) {
+@media (max-width: 905px) {
     .contenedorTarjetas {
         flex-direction: column;
         align-items: center;
@@ -309,6 +323,10 @@ header {
                 color: var(--color-gray-light);
             }
         }
+        /* Media query para la vista móvil */
+    @media (max-width: 768px) {
+        width: 90%;
+    }
     }
 }
 /*FOOTER*/
@@ -317,6 +335,7 @@ header {
         display:flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
+        text-align: center;
         margin: 0 auto;
         width: 90%;
         padding: 2rem;
