--- a/css/styles.css
+++ b/css/styles.css
@@ -348,3 +348,12 @@ header {
         }
     }
 }
+/** ESTILOS TICKETS.HTML **/
+.visible {
+    display: block;
+}
+.solidButon {
+    border: 1px solid var(--color-green-light);
+    border-radius: 5px;
+    background-color: var(--color-green-light);
+}
