--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,6 @@
     font-size: 1rem;
     box-sizing: border-box;
     font-family: 'Hind', sans-serif;
-    /* font-family: 'Quicksand', sans-serif; */
-    /* font-family: 'Sofia Sans Condensed', sans-serif; */
 }
 /* ESTILOS FONDOS*/
 header {
@@ -47,10 +45,12 @@ footer {
 /* ESTILOS LINKS/ANCLAS */
 .contenedorLinks {
     list-style-type: none;
+    row-gap: 0.7rem;
 }
 .link {
     text-decoration: none;
-    padding: 10px;
+    padding: 0.3rem;
+    margin: 1rem 0.5rem 1rem 0.5rem;
 }
 .activo {
     color: var(--color-white);
@@ -60,6 +60,11 @@ footer {
 }
 .especial {
     color: var(--color-green-dark);
+}
+.especial:hover {
+    color: var(--color-white);
+    background-color: var(--color-green-dark);
+    border-radius: 5px;
 }
 
 /*HEADER*/
@@ -118,11 +123,19 @@ header {
         .transparentButon {
             border: 1px solid var(--color-white);
             border-radius: 5px;
+            transition: transform 0.3s;
+        }
+        .transparentButon:hover {
+            transform: scale(1.05);
         }
         .solidButon {
             border: 1px solid var(--color-green-dark);
             border-radius: 5px;
             background-color: var(--color-green-dark);
+            transition: transform 0.3s;
+        }
+        .solidButon:hover {
+            transform: scale(1.05);
         }
         > div {
             display: flex;
@@ -241,6 +254,10 @@ header {
             border-radius: 5px;
             margin-top: 0.5rem;
             margin-bottom: 0.5rem;
+            transition: transform 0.3s;
+        }
+        .transparentButon:hover {
+            transform: scale(1.05);
         }
         > * {
             margin: 1.5rem;
@@ -356,4 +373,31 @@ header {
     border: 1px solid var(--color-green-light);
     border-radius: 5px;
     background-color: var(--color-green-light);
+}
+.especialTickets {
+    color: var(--color-white);
+    background-color: var(--color-green-dark);
+    border-radius: 5px;
+}
+header h2 {
+    font-size: 1rem;
+    font-weight: bolder;
+}
+
+/** ESTILOS 404.HTML **/
+.error404 {
+    background: linear-gradient(to right, #00000097, #00000097), url("../assets/img/hawaii.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: var(--color-white);
+    .solidButon {
+            border: 1px solid var(--color-green-dark);
+            border-radius: 5px;
+            background-color: var(--color-green-dark);
+            transition: transform 0.3s;
+        }
+    .solidButon:hover {
+            transform: scale(1.05);
+        }
 }
